--- a/contact.html
+++ b/contact.html
@@ -8,7 +8,19 @@
     <title>Contact</title>
   </head>
 
+  <!-- <style>
+    h1 {
+      color: rgb(131, 171, 12);
+    }
+  </style> -->
+
+  <link rel="stylesheet" href="style.css" type="text/css">
+
+
+
   <body>
+    <!-- inline CSS
+      <h1 style="color: tomato;">My Contact Page</h1> -->
     <h1>My Contact Page</h1>
     <a href="index.html">Portfolio</a>
 
