--- a/index.html
+++ b/index.html
@@ -61,6 +61,13 @@
         font-size: 30px;
         color: blue;
       }
+
+      .paray p:hover::after {
+        content: ' Hello 2! ';
+        font-weight: bold;
+        font-size: 30px;
+        color: violet;
+      }
     </style>
 
 
