--- a/index.html
+++ b/index.html
@@ -67,6 +67,50 @@
         font-weight: bold;
         font-size: 30px;
         color: violet;
+
+
+      }
+
+      * {
+        margin: 0;
+        padding: 0;
+        box-sizing: border-box;
+      }
+
+      .box4 {
+        width: 200px;
+        height: 200px;
+        background-color: darkgreen;
+        border: 1px solid greenyellow;
+        margin: 10px 20px 0 10px;
+        padding: 50px 20px 5px 10px;
+      }
+
+      .box5 {
+        border: 1px solid greenyellow;
+        background-color: darkblue;
+        height: 200px;
+        width: 200px;
+        margin-left: 210px;
+        padding: 5px 10px 10px 10px;
+      }
+
+      .box6 {
+        width: 200px;
+        height: 200px;
+        background-color: darkviolet;
+        border: 1px solid greenyellow;
+        margin-left: 410px;
+        padding: 5px 10px 10px 10px;
+      }
+
+      .box7 {
+        width: 200px;
+        height: 200px;
+        background-color: darkviolet;
+        border: 1px solid greenyellow;
+        margin: 0 auto;
+        padding: 5px 10px 10px 10px;
       }
     </style>
 
@@ -117,6 +161,23 @@
         molestias, architecto non odio libero.</p>
 
     </div>
+
+    <div class="box4">
+      <p>Lorem ipsum, dolor sit amet consectetur adipisicing elit. Impedit, officia.</p>
+
+    </div>
+
+    <div class="box5">
+      <p>Lorem ipsum dolor sit amet.</p>
+    </div>
+
+    <div class="box6">
+      <p>Lorem ipsum dolor, sit amet consectetur adipisicing elit.</p>
+    </div>
+    <div class="box7">
+      <p>Lorem ipsum dolor, sit amet consectetur adipisicing elit.</p>
+    </div>
+
 
 
   </body>
