--- a/index.html
+++ b/index.html
@@ -7,6 +7,14 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>web-css</title>
     <style>
+      /* @import url('https://fonts.googleapis.com/css2?family=Roboto:wght@400;500&family=Rubik+Pixels&display=swap'); 
+      */
+
+      @font-face {
+        font-family: Nunito;
+        src: url(assets/fonts/Nunito-Regular.ttf);
+      }
+
       /* * {
         color: green;
       } */
@@ -78,6 +86,7 @@
       }
 
       .box4 {
+        display: block;
         width: 200px;
         height: 200px;
         background-color: darkgreen;
@@ -104,7 +113,24 @@
         padding: 5px 10px 10px 10px;
       }
 
-      .box7 {
+
+      .box7,
+      .p {
+        text-decoration: underline greenyellow wavy;
+        color: rgba(150, 500, 300, 0.5);
+        font-size: 1.5rem;
+        text-align: justify;
+        font-weight: bolder;
+        font-style: italic;
+        text-transform: capitalize;
+        text-align: center;
+        font-family: 'Nunito';
+        line-height: 2rem;
+        letter-spacing: 3px;
+        word-spacing: 5px;
+
+
+
         width: 200px;
         height: 200px;
         background-color: darkviolet;
