--- a/index.html
+++ b/index.html
@@ -129,14 +129,176 @@
         letter-spacing: 3px;
         word-spacing: 5px;
 
-
-
         width: 200px;
         height: 200px;
         background-color: darkviolet;
         border: 1px solid greenyellow;
         margin: 0 auto;
         padding: 5px 10px 10px 10px;
+      }
+
+      .box8 {
+        width: 300px;
+        height: 200px;
+        border: 1px dashed black;
+        overflow: auto;
+
+      }
+
+      .box9 {
+        margin: 50px;
+        width: 400px;
+        height: 500px;
+        border: 1px solid brown;
+        box-shadow: goldenrod 10px 10px 10px 5px;
+        cursor: pointer;
+      }
+
+      .box9 img {
+        width: 100%;
+        height: 60%;
+        object-fit: cover;
+      }
+
+      .info {
+        padding: 10px;
+
+      }
+
+      .box10 {
+        margin: 50px;
+        width: 200px;
+        height: 200px;
+        background-color: brown;
+        position: absolute;
+        right: 0;
+      }
+
+      .box11 {
+        width: 200px;
+        height: 200px;
+        background-color: rebeccapurple;
+        position: absolute;
+        left: 0;
+      }
+
+      .box12 {
+        width: 200px;
+        height: 200px;
+        background-color: red;
+        position: relative;
+        left: 200px;
+        top: 200px;
+      }
+
+      .box13 {
+        margin-bottom: 250px;
+        width: 200px;
+        height: 200px;
+        background-color: yellowgreen;
+        position: relative;
+        left: 400px;
+        top: 200px;
+      }
+
+      .box14 {
+        width: 250px;
+        height: 300px;
+        border: 1px solid rgb(47, 2, 2);
+        position: relative;
+      }
+
+      .box15 {
+        width: 50px;
+        height: 50px;
+        background-color: seagreen;
+        position: absolute;
+
+
+      }
+
+      .box16 {
+        width: 50px;
+        height: 50px;
+        background-color: rgb(121, 53, 53);
+        position: absolute;
+        left: 50px;
+        top: 50px;
+
+      }
+
+      .box17 {
+        width: 50px;
+        height: 50px;
+        background-color: rgb(244, 5, 5);
+        position: absolute;
+        left: 100px;
+        top: 100px;
+      }
+
+      .box18 {
+        margin-top: 50px;
+        width: 300px;
+        height: 250px;
+        border: 1px solid black;
+        position: relative;
+      }
+
+      .box18 img {
+        width: 100%;
+        height: 100%;
+        position: absolute;
+        filter: hue-rotate(100deg);
+        filter: sepia(80%);
+        filter: blur(2px);
+      }
+
+      .box18 p {
+        position: absolute;
+        top: 10px;
+        left: 20px;
+      }
+
+      body {
+        background-image: url(https://images.unsplash.com/photo-1681740331548-a0ca30124f19?ixlib=rb-4.0.3&ixid=MnwxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8&auto=format&fit=crop&w=1167&q=80);
+        background-repeat: round;
+        background-size: contain;
+        background-color: green;
+        background-blend-mode: darken;
+
+      }
+
+      .box19 {
+        background-image: url(assets/images/Pubg\ Squad\ \(1366x768\).jpg);
+        width: 500px;
+        height: 500px;
+        position: relative;
+        background-color: blue;
+        background-blend-mode: darken;
+
+      }
+
+      .box19 p {
+        color: goldenrod;
+        position: absolute;
+        top: 0;
+        z-index: 1;
+      }
+
+      .box20 img {
+        height: 400px;
+        width: 400px;
+        border-radius: 50%;
+      }
+
+      .box21 {
+        background-image: url(assets/images/Pubg\ Squad\ \(1366x768\).jpg);
+        background-size: cover;
+        height: 400px;
+        width: 400px;
+        background-color: black;
+        border: 1px solid grey;
+
       }
     </style>
 
@@ -160,6 +322,7 @@
     <div class="box2">
       <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Voluptatem tenetur dolorem nihil perferendis sed
         velit, expedita vitae autem quaerat iusto?</p>
+
     </div>
 
     <div class="box3">
@@ -204,7 +367,70 @@
       <p>Lorem ipsum dolor, sit amet consectetur adipisicing elit.</p>
     </div>
 
+    <div class="box8">
+      <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Commodi quaerat, pariatur minima, placeat dignissimos
+        quibusdam voluptates corporis, deleniti recusandae a eum. Quidem, rerum quaerat! Omnis corrupti quo ratione,
+        recusandae ab reiciendis molestias, rerum aperiam dolores optio voluptatum ullam eveniet veritatis? Architecto
+        consectetur sapiente cumque quisquam quod quos recusandae odio tempore?Lorem ipsum dolor, sit amet consectetur
+        adipisicing elit. Quis laudantium nesciunt eos molestiae, quos officiis inventore quidem aut ex temporibus.</p>
+    </div><br><br>
 
+    <div class="box9">
+      <img
+        src="https://images.unsplash.com/photo-1682300616557-3f19269b3acd?ixlib=rb-4.0.3&ixid=MnwxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8&auto=format&fit=crop&w=387&q=80"
+        alt="car">
+      <div class="info">
+        <h3>Car</h3>
+        <p>Lorem ipsum, dolor sit amet consectetur adipisicing elit. Saepe, error illum. Iusto tempore molestias nobis
+          nostrum id voluptate sapiente quibusdam ipsa voluptas nisi! Quae cum incidunt esse earum optio quidem quam
+          unde minus officiis expedita, natus nihil rem quasi repudiandae maiores sapiente atque aliquid, aliquam velit
+          fugit suscipit aperiam consequuntur!</p>
+      </div>
+    </div>
+
+    <div class="box10"></div>
+
+    <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Laboriosam, nostrum. Minus, eos! In odit molestiae
+      temporibus culpa, ea perspiciatis, fugit, obcaecati quam ullam odio cum. Facilis maiores vel possimus quod dolor
+      mollitia debitis vero est impedit! Blanditiis earum animi architecto, inventore deserunt alias, quam ea facilis,
+      distinctio nisi fugit enim dicta maiores hic officiis vero rem atque facere iure et voluptatem excepturi!
+      Possimus consectetur ratione voluptas. Repellendus totam iste vero consequuntur. Harum minus id adipisci totam
+      explicabo perspiciatis facere, laboriosam voluptates doloribus error deserunt ipsam unde doloremque tempore
+      illum dolorem! Voluptatem, a. Minus eveniet expedita voluptatibus ipsam aliquid quis reprehenderit labore
+      perspiciatis nisi quod earum quas odio porro voluptas eos error ipsa excepturi quia aut alias, impedit, beatae
+      quibusdam similique animi! Sequi quis aspernatur necessitatibus, labore, ut quaerat culpa, distinctio eos
+      molestiae dicta ullam. Neque consectetur, exercitationem quia vitae quos officiis ea autem, quae sunt alias, id
+      rerum suscipit eligendi. Lorem ipsum dolor sit amet </p>
+
+    <div class="box11"></div>
+    <div class="box12"></div>
+    <div class="box13"></div>
+
+    <div class="box14">
+      <div class="box15"></div>
+      <div class="box16"></div>
+      <div class="box17"></div>
+    </div>
+
+    <div class="box18"><img
+        src="https://plus.unsplash.com/premium_photo-1674086970842-a72b3ffd004d?ixlib=rb-4.0.3&ixid=MnwxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8&auto=format&fit=crop&w=1172&q=80"
+        alt="mountain">
+      <p>Lorem ipsum dolor sit, amet consectetur adipisicing elit. Nam, repudiandae?</p>
+    </div>
+
+    <div class="box19">
+      <!-- <img src="assets/images/Pubg Squad (1366x768).jpg" alt=""> -->
+      <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Asperiores, doloremque officia? Sit magnam laudantium,
+        ipsam officia culpa animi cumque rerum esse eveniet reprehenderit cum, iure veniam voluptatum quas ab? Accusamus
+        fuga doloremque enim totam sunt repellat exercitationem harum earum mollitia eveniet aperiam, vitae odio facere
+        placeat tempora rerum in libero?</p>
+    </div>
+
+    <div class="box20">
+      <img src="assets/images/Pubg Squad (1366x768).jpg" alt="">
+    </div>
+
+    <div class="box21"></div>
 
   </body>
 
