--- a/index.html
+++ b/index.html
@@ -81,6 +81,7 @@
       .article h3 {
         text-align: center;
         margin-bottom: 10px;
+        margin-top: 20px;
       }
 
       @media (max-width: 813px) {
