--- a/index.html
+++ b/index.html
@@ -5,12 +5,18 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Sample Grid</title>
+    <title>Demo</title>
 
-
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.4.0/css/all.min.css"
+      integrity="sha512-iecdLmaskl7CVkqkXNQ/ZH/XLlvWZOJyj7Yy7tcenmpD1ypASozpmT/E0iPtmFIB46ZmdtAc9eNBvH0H/ZpiBw=="
+      crossorigin="anonymous" referrerpolicy="no-referrer" />
 
     <style>
       @import url('https://fonts.googleapis.com/css2?family=Inconsolata&display=swap');
+
+      :root {
+        --main-color: #1E293B
+      }
 
       * {
         padding: 0;
@@ -24,7 +30,9 @@
       }
 
       header {
-        padding: 10px;
+        background-color: var(--main-color);
+        color: white;
+        padding: 4px 20px;
         display: flex;
         align-items: baseline;
         justify-content: space-between;
@@ -33,7 +41,8 @@
 
       a {
         text-decoration: none;
-        color: black;
+        color: white;
+        padding: 10px;
 
       }
 
@@ -45,23 +54,52 @@
 
 
       .display-section {
-        margin: 10px 0 20px 0;
-        padding: 10px;
-        gap: 40px;
+        background-color: var(--main-color);
+        color: white;
+        /* margin: 0 0 20px 0; */
+        padding: 40px 20px;
+        height: 250px;
+        /* gap: 40px; */
         display: grid;
-        grid-template-columns: 1fr 1fr;
-        align-items: center;
+        grid-template-columns: 2fr 1fr;
+        /* align-items: left; */
       }
 
-      .display-content {}
+      input {
+        width: 40%;
+        border-radius: 10px;
+        padding: 5px 10px;
+        outline: none;
+      }
+
+      button {
+        padding: 5px 5px;
+        outline: none;
+        cursor: pointer;
+        border: none;
+      }
+
+      button:hover {
+        background-color: black;
+        color: white;
+
+
+      }
+
+      .display-content {
+        margin-top: 30px;
+        line-height: 2rem;
+      }
 
       .display-image img {
         width: 100%;
-
+        border-radius: 10px;
+        filter: saturate(200%);
       }
 
       .article-section {
-        padding: 10px;
+        margin-top: 70px;
+        padding: 20px;
         gap: 40px;
         display: grid;
         grid-template-columns: repeat(3, 1fr);
@@ -69,34 +107,77 @@
 
       }
 
+      i {
+        font-size: 35px;
+        padding-left: 15px;
+        padding-top: 15px;
+      }
+
       .article {
-        padding: 10px, 15px;
+        /* padding: 10px, 15px; */
         box-shadow: rgba(50, 50, 93, 0.25) 0px 30px 60px -12px, rgba(0, 0, 0, 0.3) 0px 18px 36px -18px;
       }
 
       .article p {
-        padding: 15px;
+        padding: 0 15px 15px 15px;
       }
 
       .article h3 {
-        text-align: center;
+        /* text-align: center; */
+        padding-left: 15px;
         margin-bottom: 10px;
         margin-top: 20px;
       }
 
-      @media (max-width: 813px) {
+      .testimonial-section {
+        display: grid;
+        grid-template-columns: repeat(4, 1fr);
+        padding: 20px;
+        margin-top: 40px;
+        margin-bottom: 40px;
+        gap: 10px;
+      }
+
+      .testimonials {
+        display: grid;
+        grid-template-columns: 1fr 3fr;
+        /* grid-template-rows: 1fr 3fr; */
+        /* gap: 20px; */
+        padding: 10px;
+        align-items: center;
+        border: 1px solid black;
+        border-radius: 10px;
+        background-color: var(--main-color);
+        color: white;
+      }
+
+      .testimonials p {
+        grid-column: span 2;
+      }
+
+      .testimonials img {
+        width: 70%;
+        border-radius: 50%;
+      }
+
+      @media (max-width: 1082px) {
         .display-section {
           grid-template-columns: 1fr;
+          height: 700px;
         }
 
         .article-section {
           grid-template-columns: 1fr 1fr;
         }
+
+        .testimonial-section {
+          grid-template-columns: repeat(3, 1fr);
+        }
       }
 
-      @media (max-width: 350px) {
-        nav {
-          visibility: hidden;
+      @media (max-width:700px) {
+        .testimonial-section {
+          grid-template-columns: 1fr 1fr;
         }
       }
 
@@ -106,20 +187,26 @@
         }
       }
 
-      /* @media (max-width: 337px) {
-        .article-section {
+      @media (max-width: 480px) {
+        .testimonial-section {
           grid-template-columns: 1fr;
         }
-      } */
+      }
+
+      @media (max-width: 233px) {
+        nav {
+          visibility: hidden;
+        }
+      }
     </style>
 
   </head>
 
   <body>
     <header>
-      <h1> <a href="index.html">Sample Grid</a></h1>
+      <h1> <a href="demo.html">Skillz</a></h1>
       <nav>
-        <a href="index.html">Home</a>
+        <!-- <a href="demo.html">Home</a> -->
         <a href="about.html">About</a>
         <a href="contact.html">Contact</a>
       </nav>
@@ -127,25 +214,29 @@
 
 
     <div class="display-section">
+
+      <div class="display-content">
+        <h1>Learn any digital skill of your choice today</h1>
+        <h3>Over 30000 students currently learn with us</h3>
+        <form>
+          <input type="text" placeholder="Enter your email address">
+          <button>Start Learning</button>
+        </form>
+        <p>Try out our free courses. No risk, no credit card required</p>
+      </div>
+
       <div class="display-image">
         <img
           src="https://images.unsplash.com/photo-1681740351761-2035384d9fd8?ixlib=rb-4.0.3&ixid=MnwxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8&auto=format&fit=crop&w=1332&q=80"
           alt="lake">
-      </div>
-      <div class="display-content">
-        <h2>Sample Grid</h2>
-        <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Facilis quidem ad voluptatibus vel tempora ratione
-          eveniet. Ipsam vitae dolorum, consequatur distinctio consectetur sequi magnam odio quos deleniti ipsum quasi
-          quo. Quisquam assumenda qui, perferendis tempore mollitia dolores voluptatem possimus cum dolorem atque nemo
-          beatae culpa quis similique recusandae inventore officia aliquam pariatur! Quidem, nihil ab iure dolor nulla
-          obcaecati blanditiis.</p>
       </div>
     </div>
 
 
     <div class="article-section">
       <div class="article">
-        <h3>Article 1</h3>
+        <i class="fa-solid fa-folder-open"></i>
+        <h3>Over 300 available courses</h3>
         <p>Lorem ipsum dolor, sit amet consectetur adipisicing elit. At porro perspiciatis neque a aspernatur cumque
           rerum distinctio sit quisquam excepturi est vero nemo, veritatis animi voluptas debitis sequi necessitatibus
           laboriosam sint nam molestias. Quae in rem voluptates. Sed vitae cupiditate deleniti, reprehenderit suscipit
@@ -153,7 +244,8 @@
       </div>
 
       <div class="article">
-        <h3>Article 2</h3>
+        <i class="fa-solid fa-folder-open fa-3x"></i>
+        <h3>Over 300 available courses</h3>
         <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Consequatur quidem expedita numquam eligendi fuga
           quaerat exercitationem quo quia, enim molestiae repudiandae voluptatum unde delectus quis ipsum sequi
           explicabo quasi ex, corrupti hic! Veritatis reiciendis vitae eveniet non accusamus, ab eligendi! Ad, aut. Quis
@@ -163,11 +255,105 @@
       </div>
 
       <div class="article">
-        <h3>Article 3</h3>
+        <i class="fa-solid fa-folder-open"></i>
+        <h3>Over 300 available courses</h3>
         <p>Lorem, ipsum dolor sit amet consectetur adipisicing elit. Ipsa a incidunt harum exercitationem totam sequi,
           id in praesentium neque? Nesciunt, dignissimos ab. Nesciunt, repellendus perspiciatis dicta sunt et doloribus
           commodi cum ratione sed aut eligendi maxime quas officiis nam ab!</p>
       </div>
+    </div>
+
+    <div class="testimonial-section">
+      <div class="testimonials">
+        <div><img
+            src="https://images.unsplash.com/photo-1618082382324-e0bd4b48e85b?ixlib=rb-4.0.3&ixid=MnwxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8&auto=format&fit=crop&w=435&q=80"
+            alt="pic">
+        </div>
+        <div>
+          <h4>Ryan Florence</h4>
+          <h5>Remix & React Training</h5>
+        </div>
+        <p>I feel like an idiot for not using Tailwind CSS until now.</p>
+      </div>
+      <div class="testimonials">
+        <div><img
+            src="https://images.unsplash.com/photo-1618082382324-e0bd4b48e85b?ixlib=rb-4.0.3&ixid=MnwxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8&auto=format&fit=crop&w=435&q=80"
+            alt="pic">
+        </div>
+        <div>
+          <h4>Ryan Florence</h4>
+          <h5>Remix & React Training</h5>
+        </div>
+        <p>Have been working with CSS for over ten years and Tailwind just makes my life easier. It is still CSS and you
+          use flex grid etc but just quicker to write and maintain. You should give it a try</p>
+      </div>
+      <div class="testimonials">
+        <div><img
+            src="https://images.unsplash.com/photo-1680971468853-a6dedea2563d?ixlib=rb-4.0.3&ixid=MnwxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8&auto=format&fit=crop&w=386&q=80"
+            alt="pic">
+        </div>
+        <div>
+          <h4>Ryan Florence</h4>
+          <h5>Remix & React Training</h5>
+        </div>
+        <p>I feel like an idiot for not using Tailwind CSS until now.</p>
+      </div>
+      <div class="testimonials">
+        <div><img
+            src="https://images.unsplash.com/photo-1618082382324-e0bd4b48e85b?ixlib=rb-4.0.3&ixid=MnwxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8&auto=format&fit=crop&w=435&q=80"
+            alt="pic">
+        </div>
+        <div>
+          <h4>Ryan Florence</h4>
+          <h5>Remix & React Training</h5>
+        </div>
+        <p>I feel like an idiot for not using Tailwind CSS until now.</p>
+      </div>
+      <div class="testimonials">
+        <div><img
+            src="https://images.unsplash.com/photo-1618082382324-e0bd4b48e85b?ixlib=rb-4.0.3&ixid=MnwxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8&auto=format&fit=crop&w=435&q=80"
+            alt="pic">
+        </div>
+        <div>
+          <h4>Ryan Florence</h4>
+          <h5>Remix & React Training</h5>
+        </div>
+        <p>I feel like an idiot for not using Tailwind CSS until now.</p>
+      </div>
+      <div class="testimonials">
+        <div><img
+            src="https://images.unsplash.com/photo-1680971468853-a6dedea2563d?ixlib=rb-4.0.3&ixid=MnwxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8&auto=format&fit=crop&w=386&q=80"
+            alt="pic">
+        </div>
+        <div>
+          <h4>Ryan Florence</h4>
+          <h5>Remix & React Training</h5>
+        </div>
+        <p>I feel like an idiot for not using Tailwind CSS until now.</p>
+      </div>
+      <div class="testimonials">
+        <div><img
+            src="https://images.unsplash.com/photo-1618082382324-e0bd4b48e85b?ixlib=rb-4.0.3&ixid=MnwxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8&auto=format&fit=crop&w=435&q=80"
+            alt="pic">
+        </div>
+        <div>
+          <h4>Ryan Florence</h4>
+          <h5>Remix & React Training</h5>
+        </div>
+        <p>I feel like an idiot for not using Tailwind CSS until now.</p>
+      </div>
+      <div class="testimonials">
+        <div><img
+            src="https://images.unsplash.com/photo-1618082382324-e0bd4b48e85b?ixlib=rb-4.0.3&ixid=MnwxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8&auto=format&fit=crop&w=435&q=80"
+            alt="pic">
+        </div>
+        <div>
+          <h4>Ryan Florence</h4>
+          <h5>Remix & React Training</h5>
+        </div>
+        <p>I feel like an idiot for not using Tailwind CSS until now.</p>
+      </div>
+
     </div>
 
   </body>
