--- a/index.html
+++ b/index.html
@@ -160,6 +160,31 @@
         border-radius: 50%;
       }
 
+      footer {
+        background-color: var(--main-color);
+        color: white;
+        display: flex;
+        justify-content: space-around;
+        padding: 25px;
+      }
+
+      .copyright h3 {
+        padding-top: 10px;
+      }
+
+      .navs {
+        display: grid;
+        /* line-height: 10px; */
+        font-size: 20px;
+
+      }
+
+      .social-links i,
+      a {
+        color: pink;
+        padding: 0;
+      }
+
       @media (max-width: 1082px) {
         .display-section {
           grid-template-columns: 1fr;
@@ -244,7 +269,7 @@
       </div>
 
       <div class="article">
-        <i class="fa-solid fa-folder-open fa-3x"></i>
+        <i class="fa-solid fa-graduation-cap"></i>
         <h3>Over 300 available courses</h3>
         <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Consequatur quidem expedita numquam eligendi fuga
           quaerat exercitationem quo quia, enim molestiae repudiandae voluptatum unde delectus quis ipsum sequi
@@ -255,7 +280,7 @@
       </div>
 
       <div class="article">
-        <i class="fa-solid fa-folder-open"></i>
+        <i class="fa-solid fa-book"></i>
         <h3>Over 300 available courses</h3>
         <p>Lorem, ipsum dolor sit amet consectetur adipisicing elit. Ipsa a incidunt harum exercitationem totam sequi,
           id in praesentium neque? Nesciunt, dignissimos ab. Nesciunt, repellendus perspiciatis dicta sunt et doloribus
@@ -355,6 +380,28 @@
       </div>
 
     </div>
+
+
+    <footer>
+
+      <div class="copyright">
+        <h1>Skillz</h1>
+        <h3>Copyright &copy 2023</h3>
+      </div>
+
+      <div class="navs">
+        <a href="">Home</a>
+        <a href="">Tutors</a>
+        <a href="">Categories</a>
+      </div>
+
+      <div class="social-links">
+        <a href=""><i class="fa-brands fa-twitter fa-2x"></i></a>
+        <a href=""><i class="fa-brands fa-instagram fa-2x"></i></a>
+        <a href=""><i class="fa-brands fa-facebook fa-2x"></i></a>
+        <a href=""><i class="fa-brands fa-whatsapp fa-2x"></i></a>
+      </div>
+    </footer>
 
   </body>
 
