--- a/index.html
+++ b/index.html
@@ -229,7 +229,7 @@
 
   <body>
     <header>
-      <h1> <a href="demo.html">Skillz</a></h1>
+      <h1> <a href="index.html">Skillz</a></h1>
       <nav>
         <!-- <a href="demo.html">Home</a> -->
         <a href="about.html">About</a>
