--- a/index.html
+++ b/index.html
@@ -133,30 +133,40 @@
         display: grid;
         grid-template-columns: repeat(4, 1fr);
         padding: 20px;
-        margin-top: 40px;
-        margin-bottom: 40px;
+        /* margin-top: 40px;
+        margin-bottom: 40px; */
         gap: 10px;
+        align-items: start;
       }
 
       .testimonials {
-        display: grid;
-        grid-template-columns: 1fr 3fr;
+        /* display: grid;
+        grid-template-columns: 1fr 3fr; */
         /* grid-template-rows: 1fr 3fr; */
         /* gap: 20px; */
-        padding: 10px;
-        align-items: center;
-        border: 1px solid black;
+        padding: 15px;
+        /* align-items: center; */
+        /* border: 1px solid black; */
         border-radius: 10px;
         background-color: var(--main-color);
         color: white;
       }
 
-      .testimonials p {
-        grid-column: span 2;
+      .user-info {
+        display: grid;
+        grid-template-columns: 1fr 2.5fr;
+        align-items: center;
+        margin-bottom: 10px;
+
       }
 
-      .testimonials img {
-        width: 70%;
+      /* .testimonials p {
+        grid-column: span 2;
+      } */
+
+      .user-info img {
+        width: 70px;
+        height: 70px;
         border-radius: 50%;
       }
 
@@ -290,94 +300,113 @@
 
     <div class="testimonial-section">
       <div class="testimonials">
-        <div><img
+        <div class="user-info">
+          <img
             src="https://images.unsplash.com/photo-1618082382324-e0bd4b48e85b?ixlib=rb-4.0.3&ixid=MnwxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8&auto=format&fit=crop&w=435&q=80"
             alt="pic">
-        </div>
-        <div>
-          <h4>Ryan Florence</h4>
-          <h5>Remix & React Training</h5>
+          <div class="user-detail">
+            <h4>Ryan Florence</h4>
+            <p>Remix & React Training</p>
+          </div>
         </div>
         <p>I feel like an idiot for not using Tailwind CSS until now.</p>
       </div>
+
       <div class="testimonials">
-        <div><img
-            src="https://images.unsplash.com/photo-1618082382324-e0bd4b48e85b?ixlib=rb-4.0.3&ixid=MnwxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8&auto=format&fit=crop&w=435&q=80"
+        <div class="user-info">
+          <img
+            src="https://images.unsplash.com/photo-1680971468853-a6dedea2563d?ixlib=rb-4.0.3&ixid=MnwxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8&auto=format&fit=crop&w=386&q=80"
             alt="pic">
-        </div>
-        <div>
-          <h4>Ryan Florence</h4>
-          <h5>Remix & React Training</h5>
+          <div class="user-detail">
+            <h4>Ryan Florence</h4>
+            <p>Remix & React Training</p>
+          </div>
         </div>
         <p>Have been working with CSS for over ten years and Tailwind just makes my life easier. It is still CSS and you
-          use flex grid etc but just quicker to write and maintain. You should give it a try</p>
+          use flex grid etc but just quicker to write and maintain. You should give it a try.</p>
       </div>
+
       <div class="testimonials">
-        <div><img
+        <div class="user-info">
+          <img
+            src="https://images.unsplash.com/photo-1618082382324-e0bd4b48e85b?ixlib=rb-4.0.3&ixid=MnwxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8&auto=format&fit=crop&w=435&q=80"
+            alt="pic">
+          <div class="user-detail">
+            <h4>Ryan Florence</h4>
+            <p>Remix & React Training</p>
+          </div>
+        </div>
+        <p>I feel like an idiot for not using Tailwind CSS until now.</p>
+      </div>
+
+      <div class="testimonials">
+        <div class="user-info">
+          <img
             src="https://images.unsplash.com/photo-1680971468853-a6dedea2563d?ixlib=rb-4.0.3&ixid=MnwxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8&auto=format&fit=crop&w=386&q=80"
             alt="pic">
-        </div>
-        <div>
-          <h4>Ryan Florence</h4>
-          <h5>Remix & React Training</h5>
+          <div class="user-detail">
+            <h4>Ryan Florence</h4>
+            <p>Remix & React Training</p>
+          </div>
         </div>
         <p>I feel like an idiot for not using Tailwind CSS until now.</p>
       </div>
+
       <div class="testimonials">
-        <div><img
+        <div class="user-info">
+          <img
             src="https://images.unsplash.com/photo-1618082382324-e0bd4b48e85b?ixlib=rb-4.0.3&ixid=MnwxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8&auto=format&fit=crop&w=435&q=80"
             alt="pic">
+          <div class="user-detail">
+            <h4>Ryan Florence</h4>
+            <p>Remix & React Training</p>
+          </div>
         </div>
-        <div>
-          <h4>Ryan Florence</h4>
-          <h5>Remix & React Training</h5>
-        </div>
-        <p>I feel like an idiot for not using Tailwind CSS until now.</p>
+        <p>Have been working with CSS for over ten years and Tailwind just makes my life easier. It is still CSS and you
+          use flex grid etc but just quicker to write and maintain. You should give it a try.</p>
       </div>
+
       <div class="testimonials">
-        <div><img
+        <div class="user-info">
+          <img
             src="https://images.unsplash.com/photo-1618082382324-e0bd4b48e85b?ixlib=rb-4.0.3&ixid=MnwxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8&auto=format&fit=crop&w=435&q=80"
             alt="pic">
-        </div>
-        <div>
-          <h4>Ryan Florence</h4>
-          <h5>Remix & React Training</h5>
+          <div class="user-detail">
+            <h4>Ryan Florence</h4>
+            <p>Remix & React Training</p>
+          </div>
         </div>
         <p>I feel like an idiot for not using Tailwind CSS until now.</p>
       </div>
+
       <div class="testimonials">
-        <div><img
+        <div class="user-info">
+          <img
             src="https://images.unsplash.com/photo-1680971468853-a6dedea2563d?ixlib=rb-4.0.3&ixid=MnwxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8&auto=format&fit=crop&w=386&q=80"
             alt="pic">
-        </div>
-        <div>
-          <h4>Ryan Florence</h4>
-          <h5>Remix & React Training</h5>
+          <div class="user-detail">
+            <h4>Ryan Florence</h4>
+            <p>Remix & React Training</p>
+          </div>
         </div>
         <p>I feel like an idiot for not using Tailwind CSS until now.</p>
       </div>
+
       <div class="testimonials">
-        <div><img
+        <div class="user-info">
+          <img
             src="https://images.unsplash.com/photo-1618082382324-e0bd4b48e85b?ixlib=rb-4.0.3&ixid=MnwxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8&auto=format&fit=crop&w=435&q=80"
             alt="pic">
+          <div class="user-detail">
+            <h4>Ryan Florence</h4>
+            <p>Remix & React Training</p>
+          </div>
         </div>
-        <div>
-          <h4>Ryan Florence</h4>
-          <h5>Remix & React Training</h5>
-        </div>
-        <p>I feel like an idiot for not using Tailwind CSS until now.</p>
+        <p>Have been working with CSS for over ten years and Tailwind just makes my life easier. It is still CSS and you
+          use flex grid etc but just quicker to write and maintain. You should give it a try.</p>
       </div>
-      <div class="testimonials">
-        <div><img
-            src="https://images.unsplash.com/photo-1618082382324-e0bd4b48e85b?ixlib=rb-4.0.3&ixid=MnwxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8&auto=format&fit=crop&w=435&q=80"
-            alt="pic">
-        </div>
-        <div>
-          <h4>Ryan Florence</h4>
-          <h5>Remix & React Training</h5>
-        </div>
-        <p>I feel like an idiot for not using Tailwind CSS until now.</p>
-      </div>
+
+
 
     </div>
 
